# PromptWizard

./: .gitignore  README.md  config.py  main.py  prompting.py  pyproject.toml
static/: app.js  styles.css
templates/: index.html
templates/partials/: checkpoints.html  prompt_result.html
