[project]
name = "prompalchemy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "google-genai>=0.6.0",
    "openai>=1.40.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30.0",
]
